# pycircuit-sim-part2

./: LICENSE  README.md  __init__.py  core.py  netlist.py  pyproject.toml  run_example.py  setup.cfg  test_basic.py  voltage_divider.net
